add gitinore
