# docs/swagger.yaml
@@ -51,6 +51,21 @@ definitions:
     - name
     - password
     type: object
+  domain.Wallet:
+    properties:
+      balance:
+        type: number
+      created_at:
+        type: string
+      id:
+        type: integer
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    required:
+    - user_id
+    type: object
   handler.LoginRequest:
     properties:
       email:
@@ -103,40 +118,23 @@ info:
   title: Wallet API
   version: "1.0"
 paths:
-  /api/users/profile:
-    get:
+  /api/wallets/topup:
+    post:
       consumes:
       - application/json
-      description: Get the profile of the logged-in user
+      description: Top up wallet balance (mock implementation)
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: TopUp Not Implemented
           schema:
-            allOf:
-            - $ref: '#/definitions/utils.ApiResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/domain.User'
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.ApiResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/utils.ApiResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.ApiResponse'
+            type: string
       security:
       - BearerAuth: []
-      summary: Get user profile
+      summary: Top up wallet
       tags:
-      - User
+      - Wallet
   /auth/login:
     post:
       consumes:
@@ -287,21 +285,72 @@ paths:
       summary: Transfer funds
       tags:
       - Wallet
-  /wallets/topup:
-    post:
+  /users/profile:
+    get:
       consumes:
       - application/json
-      description: Top up wallet balance (mock implementation)
+      description: Get the profile of the logged-in user
       produces:
       - application/json
       responses:
         "200":
-          description: TopUp Not Implemented
+          description: OK
           schema:
-            type: string
+            allOf:
+            - $ref: '#/definitions/utils.ApiResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.User'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.ApiResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.ApiResponse'
       security:
       - BearerAuth: []
-      summary: Top up wallet
+      summary: Get user profile
+      tags:
+      - User
+  /wallets/balance:
+    get:
+      consumes:
+      - application/json
+      description: Get current balance of logged-in user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ApiResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.Wallet'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.ApiResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.ApiResponse'
+      security:
+      - BearerAuth: []
+      summary: Get user balance
       tags:
       - Wallet
 securityDefinitions:
